manifests/staging/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: cluster-issuer-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.70.34.202.247.nip.io
      secretName: argocd-tls
  rules:
    - host: argocd.70.34.202.247.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
